fix z-index for zap widget

--- a/src/main/resources/css/portal.bs3.css
+++ b/src/main/resources/css/portal.bs3.css
@@ -1,3 +1,7 @@
 .glyphicon.icon-white {
     color: #fff;
 }
+
+#portalWidgetsZap {
+    z-index: 1000;
+}
